// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover Trigger Element Renders trigger element and appends action props 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 9999px;
  border-width: 0;
  border-style: solid;
  border-radius: 9999px;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #0068ef;
  color: #fff;
}

.c1:hover {
  background-color: #049;
  color: #fff;
}

.c1:focus {
  outline: 0px solid #049;
  box-shadow: 0 0 0 2px #049;
}

.c1:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
  class="c0"
>
  <button
    aria-label="Top Popover"
    class="c1"
    color="primary"
    type="button"
  >
    <div
      class="c2"
    >
      Trigger Button
    </div>
  </button>
</div>
`;

exports[`Popover Trigger Element renders with FocusLock 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <button
      aria-label="Top Popover"
      type="button"
    >
      Trigger Button
    </button>
  </div>
</DocumentFragment>
`;

exports[`Popover UI Positioning Bottom 1`] = `
.c0 {
  border-radius: 16px;
  width: 400px;
  display: inline-block;
  padding: 8px;
}

.c4 {
  background-color: #fff;
  color: #001833;
  border-radius: 16px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 4px 16px 0 rgba(0,0,0,0.2),0 4px 16px -4px rgba(0,0,0,0.2),0 12px 24px -2px rgba(0,0,0,0.2);
}

.c2 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c2 * {
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  width: 8px;
  height: 8px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c5[data-placement*='left'] {
  border-color: transparent #c0cad5 #c0cad5 transparent;
}

.c5[data-placement*='right'] {
  border-color: #c0cad5 transparent transparent #c0cad5;
}

.c5[data-placement*='top'] {
  border-color: transparent transparent #c0cad5 #c0cad5;
}

.c5[data-placement*='bottom'] {
  border-color: #c0cad5 #c0cad5 transparent transparent;
}

.c1 {
  box-sizing: border-box;
  max-width: 400px;
  width: 100%;
  z-index: 102;
}

.c3 {
  box-sizing: border-box;
  font-size: 12px;
  max-width: 100%;
  outline: 0;
  border-radius: 16px;
}

<div
  aria-describedby="dialog-description-1"
  class="c0 c1"
  data-placement="bottom"
  display="inline-block"
  role="dialog"
  style="position: absolute; top: 8px; left: 8px;"
  tabindex="-1"
  width="400"
>
  <div
    class="c2"
  >
    <section
      class="c3"
      data-testid="popover-content-container"
      tabindex="-1"
      width="400"
    >
      <div
        class="c4"
        color="background.lightest"
        data-testid="dialog-content"
        id="popover-description-1"
        tabindex="-1"
      >
        <div
          class=""
        >
          <p>
            Hello there!
          </p>
          <button>
            Click me to close button!
          </button>
        </div>
      </div>
    </section>
  </div>
  <div
    class="c5"
    color="background.lightest"
    data-placement="bottom"
    data-testid="popover-arrow"
    style="top: 3px; left: 0px;"
  />
</div>
`;

exports[`Popover UI Positioning Bottom End 1`] = `
.c0 {
  border-radius: 16px;
  width: 400px;
  display: inline-block;
  padding: 8px;
}

.c4 {
  background-color: #fff;
  color: #001833;
  border-radius: 16px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 4px 16px 0 rgba(0,0,0,0.2),0 4px 16px -4px rgba(0,0,0,0.2),0 12px 24px -2px rgba(0,0,0,0.2);
}

.c2 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c2 * {
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  width: 8px;
  height: 8px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c5[data-placement*='left'] {
  border-color: transparent #c0cad5 #c0cad5 transparent;
}

.c5[data-placement*='right'] {
  border-color: #c0cad5 transparent transparent #c0cad5;
}

.c5[data-placement*='top'] {
  border-color: transparent transparent #c0cad5 #c0cad5;
}

.c5[data-placement*='bottom'] {
  border-color: #c0cad5 #c0cad5 transparent transparent;
}

.c1 {
  box-sizing: border-box;
  max-width: 400px;
  width: 100%;
  z-index: 102;
}

.c3 {
  box-sizing: border-box;
  font-size: 12px;
  max-width: 100%;
  outline: 0;
  border-radius: 16px;
}

<div
  aria-describedby="dialog-description-1"
  class="c0 c1"
  data-placement="bottom-end"
  display="inline-block"
  role="dialog"
  style="position: absolute; top: 8px; left: 8px;"
  tabindex="-1"
  width="400"
>
  <div
    class="c2"
  >
    <section
      class="c3"
      data-testid="popover-content-container"
      tabindex="-1"
      width="400"
    >
      <div
        class="c4"
        color="background.lightest"
        data-testid="dialog-content"
        id="popover-description-1"
        tabindex="-1"
      >
        <div
          class=""
        >
          <p>
            Hello there!
          </p>
          <button>
            Click me to close button!
          </button>
        </div>
      </div>
    </section>
  </div>
  <div
    class="c5"
    color="background.lightest"
    data-placement="bottom-end"
    data-testid="popover-arrow"
    style="top: 3px; left: 0px;"
  />
</div>
`;

exports[`Popover UI Positioning Bottom Start 1`] = `
.c0 {
  border-radius: 16px;
  width: 400px;
  display: inline-block;
  padding: 8px;
}

.c4 {
  background-color: #fff;
  color: #001833;
  border-radius: 16px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 4px 16px 0 rgba(0,0,0,0.2),0 4px 16px -4px rgba(0,0,0,0.2),0 12px 24px -2px rgba(0,0,0,0.2);
}

.c2 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c2 * {
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  width: 8px;
  height: 8px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c5[data-placement*='left'] {
  border-color: transparent #c0cad5 #c0cad5 transparent;
}

.c5[data-placement*='right'] {
  border-color: #c0cad5 transparent transparent #c0cad5;
}

.c5[data-placement*='top'] {
  border-color: transparent transparent #c0cad5 #c0cad5;
}

.c5[data-placement*='bottom'] {
  border-color: #c0cad5 #c0cad5 transparent transparent;
}

.c1 {
  box-sizing: border-box;
  max-width: 400px;
  width: 100%;
  z-index: 102;
}

.c3 {
  box-sizing: border-box;
  font-size: 12px;
  max-width: 100%;
  outline: 0;
  border-radius: 16px;
}

<div
  aria-describedby="dialog-description-1"
  class="c0 c1"
  data-placement="bottom-start"
  display="inline-block"
  role="dialog"
  style="position: absolute; top: 8px; left: 8px;"
  tabindex="-1"
  width="400"
>
  <div
    class="c2"
  >
    <section
      class="c3"
      data-testid="popover-content-container"
      tabindex="-1"
      width="400"
    >
      <div
        class="c4"
        color="background.lightest"
        data-testid="dialog-content"
        id="popover-description-1"
        tabindex="-1"
      >
        <div
          class=""
        >
          <p>
            Hello there!
          </p>
          <button>
            Click me to close button!
          </button>
        </div>
      </div>
    </section>
  </div>
  <div
    class="c5"
    color="background.lightest"
    data-placement="bottom-start"
    data-testid="popover-arrow"
    style="top: 3px; left: 0px;"
  />
</div>
`;
